prevent overflow to avoid content displacement

--- a/feedi/static/css/main.css
+++ b/feedi/static/css/main.css
@@ -31,6 +31,10 @@
     flex-shrink: 1!important;
 }
 
+.column {
+    overflow: hidden!important;
+}
+
 .feed-header {
     margin-bottom: 0!important;
 }
@@ -68,10 +72,6 @@
     vertical-align: top;
     top: 1rem;
     bottom: 0;
-}
-
-.sidebar-right {
-    margin-right: .5rem
 }
 
 li.is-active, li.is-active  a:hover {
